<resources>
    <string name="app_name">JAVAngers</string>
    <string name="WelcomeMessageFR">Bienvenue sur le projet JAVAngers (Katherine, Charline, Valentin, Ugo)</string>
    <string name="Connexion">Connexion</string>
    <string name="warningconnexion">L\'application JAVAngers ne pourra être tenue responsable en cas de perte d\'un membre ou de la vie de l\'utilisateur subséquent à l\'utilisation de ladite application</string>
    <string name="inscription">inscription</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_profile_form">Profile Form</string>
    <string name="Profile_form_header">Bienvenue sur l\'application JAVAngers, veuillez compléter votre profil pour continuer</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="title_activity_user__menu">User Menu</string>
    <string name="declincident">Déclarer un incident</string>
    <string name="decllitige">Déclarer un litige</string>
    <string name="remplirsatis">Remplir une enquète de satisfaction</string>
    <string name="modifprofile">Modifier mon profil</string>
    <string name="title_activity_incident_declaration">Déclarer un incident</string>
    <string name="valid">Valider</string>
    <string name="title_activity_su_menu">Menu Super Admin</string>
    <string name="Missions">Missions</string>
    <string name="Crises">Crises</string>
    <string name="Incidents">Incidents</string>
    <string name="Users">Utilisateurs</string>
    <string name="title_activity_missions">Missions</string>
    <string name="title_activity_incidents">Incidents</string>
    <string name="title_activity_incident">Incident</string>
    <string name="title_activity_hero">Hero</string>
    <string name="title_activity_users">Utilisateurs</string>
    <string name="title_activity_hero_menu">menu héros</string>
    <string name="remplrapp">Remplir un rapport de mission</string>
    <string name="title_activity_admin_menu">admin_menu</string>
</resources>
